e.data 바로 넘기기

--- a/view/gears.html
+++ b/view/gears.html
@@ -96,7 +96,9 @@
           </div>
         </body>
       </div>
+      <link rel="import" href="/view/modal.html" />
 
+      ​
       <div id="popup">
         <div class="popup-entire-wrap">
           <div>
@@ -382,13 +384,7 @@
           <button class="popup-save-btn" onclick="saveData()" type="button">
             Save
           </button>
-          <button
-            class="popup-close-btn"
-            onclick="popup.hide();  showShipParticular()"
-            type="button"
-            같이호출
-            함수
-          >
+          <button class="popup-close-btn" onclick="popup.hide();" type="button">
             Close
           </button>
         </div>
