1차 코드리뷰

--- a/view/gears.html
+++ b/view/gears.html
@@ -68,6 +68,7 @@
                   <div class="dx-field-value">
                     <div id="productSimple"></div>
                   </div>
+
                   <input placeholder="Search..." class="gears-search-input" />
                   <button class="gears-search-btn" type="button" type="button">
                     Search
@@ -172,7 +173,7 @@
                     </div>
                     <div class="popup-nt">
                       <div>NT</div>
-                      <input class="nt-input" value="999,999" />
+                      <input class="EEDI-input" value="999,999" />
                     </div>
                   </div>
                   <div class="popup-ship-second">
@@ -188,7 +189,9 @@
                   <div class="popup-ship-third">
                     <div class="popup-ice-class">
                       <div class="ship-particular-margin">Ice Class</div>
-                      <input class="ice-input" value="None" />
+                      <div>
+                        <div id="iceClass"></div>
+                      </div>
                     </div>
                     <div class="popup-propulsion">
                       <div class="ship-particular-margin">
@@ -225,7 +228,9 @@
                     </div>
                     <div class="ship-particular-flex-element">
                       <div class="ship-particular-margin">Port of Registry</div>
-                      <input class="ship-name-input" value="NICOSIA" />
+                      <div>
+                        <div id="portOfRegistry"></div>
+                      </div>
                     </div>
                   </div>
                   <div class="ship-particular-flex">
