--- a/css/gears.css
+++ b/css/gears.css
@@ -281,7 +281,7 @@ element.style {
 .dx-header-row {
   height: 10px !important;
 }
-.dx-texteditor-container {
+#productSimple {
   width: 150px !important;
   height: 42.3px !important;
   border-radius: 4px !important;
@@ -847,4 +847,18 @@ input {
   font-weight: bold;
 
   color: #333;
+}
+#iceClass {
+  width: 290px !important;
+  height: 38px !important;
+  border-radius: 4px;
+  border: solid 1px #d5dadf;
+  background-color: #fff;
+}
+#portOfRegistry {
+  width: 290px !important;
+  height: 38px !important;
+  border-radius: 4px;
+  border: solid 1px #d5dadf;
+  background-color: #fff;
 }
