API모듈화, 중복 코드 for문

--- a/view/gears.html
+++ b/view/gears.html
@@ -395,9 +395,10 @@
         </div>
       </div>
     </div>
-    <script src="/js/data.js"></script>
-    <script src="/js/popup.js"></script>
-    <script src="/js/gears.js"></script>
-    <script src="/js/table.js"></script>
+    <script src="/js/API/index.js"></script>
+    <script src="/js/data/data.js"></script>
+    <script src="/js/modal/popup.js"></script>
+    <script src="/js/common/index.js"></script>
+    <script src="/js/table/table.js"></script>
   </body>
 </html>
