--- a/css/gears.css
+++ b/css/gears.css
@@ -433,6 +433,8 @@ element.style {
 }
 .dx-overlay-content {
   width: 740px !important;
+
+  height: 875px !important;
 }
 .popup-top {
   display: flex;
@@ -747,9 +749,9 @@ element.style {
 .dx-icon {
   color: #fff !important;
 }
-.dx-popup-content {
-  overflow: auto !important;
-}
+/* .dx-popup-content {
+  overflow: auto;
+} */
 input {
   padding-right: 12px;
   padding-left: 12px;
@@ -861,4 +863,7 @@ input {
   border-radius: 4px;
   border: solid 1px #d5dadf;
   background-color: #fff;
+}
+.dx-overlay-content {
+  overflow: auto !important;
 }
