--- a/view/gears.html
+++ b/view/gears.html
@@ -213,10 +213,10 @@
                         class="ship-particular-flex-element element-margin-right"
                       >
                         <div class="ship-particular-margin">Flag</div>
-                        <input
-                          class="ship-name-input"
-                          value="THE REPUBLIC OF CYPRUS"
-                        />
+
+                        <div>
+                          <div id="flag"></div>
+                        </div>
                       </div>
                       <div class="ship-particular-flex-element">
                         <div class="ship-particular-margin">
@@ -234,13 +234,15 @@
                         <div class="ship-particular-margin element-margin-top">
                           Ship Owner
                         </div>
-                        <input class="ice-input" value="123e" />
+                        <input class="ice-input" value="123e" id="shipOwner" />
                       </div>
                       <div class="ship-particular-flex-element">
                         <div class="ship-particular-margin element-margin-top">
-                          Ship Owner
+                          Classification
                         </div>
-                        <input class="ice-input" value="KOREAN REGISTER" />
+                        <div>
+                          <div id="classification"></div>
+                        </div>
                       </div>
                     </div>
                     <div class="ship-particular-flex">
@@ -248,13 +250,13 @@
                         class="ship-particular-flex-element element-margin-top element-margin-right"
                       >
                         <div class="ship-particular-margin">Official No</div>
-                        <input class="ice-input" />
+                        <input class="ice-input" id="officialNO" />
                       </div>
                       <div
                         class="ship-particular-flex-element element-margin-top"
                       >
                         <div class="ship-particular-margin">Signal Letters</div>
-                        <input class="ice-input" />
+                        <input class="ice-input" id="signalLetter" />
                       </div>
                     </div>
                   </div>
