--- a/view/gears.html
+++ b/view/gears.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="/css/gears.css" />
+    <link rel="stylesheet" type="text/css" href="/js/myVessel/css/gears.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/devextreme/18.2.18/css/dx.common.min.css"
@@ -396,11 +396,10 @@
         </div>
       </div>
     </div>
-
-    <script src="/js/API/index.js"></script>
-    <script src="/js/data/data.js"></script>
-    <script src="/js/modal/popup.js"></script>
-    <script src="/js/common/index.js"></script>
-    <script src="/js/table/table.js"></script>
+    <script src="/js/myVessel/API/index.js"></script>
+    <script src="/js/myVessel/data/data.js"></script>
+    <script src="/js/myVessel/modal/index.js"></script>
+    <script src="/js/myVessel/index.js"></script>
+    <script src="/js/myVessel/table/index.js"></script>
   </body>
 </html>
