3차 코드리뷰

--- a/view/gears.html
+++ b/view/gears.html
@@ -411,9 +411,11 @@
         </div>
       </div>
     </div>
+    <script src="/js/config/axios.js"></script>
     <script src="/js/myVessel/API/index.js"></script>
     <script src="/js/myVessel/data/data.js"></script>
     <script src="/js/myVessel/modal/index.js"></script>
+    <script src="/js/myVessel/modal/test.js"></script>
     <script src="/js/myVessel/index.js"></script>
     <script src="/js/myVessel/table/index.js"></script>
   </body>
