--- a/view/gears.html
+++ b/view/gears.html
@@ -2,8 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn3.devexpress.com/jslib/23.2.4/css/dx.material.blue.light.css"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/js/myVessel/css/gears.css" />
     <link
       rel="stylesheet"
@@ -11,14 +21,29 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/devextreme/18.2.18/js/dx.all.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/devextreme/18.2.18/js/dx.all.js"></script> -->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn3.devexpress.com/jslib/23.2.3/css/dx.material.blue.light.css"
     />
-    <script src="js/dx.all.js"></script>
+    <!-- <script src="js/dx.all.js"></script> -->
+    <!-- <script
+      type="text/javascript"
+      src="https://cdn3.devexpress.com/jslib/23.2.4/js/dx.all.js"
+    ></script> -->
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn3.devexpress.com/jslib/23.2.4/css/dx.material.blue.light.css"
+    />
+
+    <script
+      type="text/javascript"
+      src="https://cdn3.devexpress.com/jslib/23.2.4/js/dx.all.js"
+    ></script>
     <title>Document</title>
   </head>
   <body id="body">
@@ -88,16 +113,16 @@
                     Add from e-fleet
                   </button>
                   <button class="gears-sync-btn" type="button">Sync API</button>
+                  <button id="gridDeleteSelected"></button>
                 </div>
-                <div>
-                  <button class="gears-delete-btn" type="button">Delete</button>
-                </div>
+                <!-- <div>
+                  <div class="gears-delete-btn"></div>
+                </div> -->
               </div>
             </div>
           </div>
         </body>
       </div>
-      <link rel="import" href="/view/modal.html" />
 
       ​
       <div id="popup" class="popup-wrapper">
