toolbar 사용 검색, 삭제기능

--- a/js/myVessel/css/gears.css
+++ b/js/myVessel/css/gears.css
@@ -893,5 +893,60 @@ input {
   background-color: #09976e !important;
 }
 .dx-button {
-  margin-bottom: 20px !important;
+  /* margin-bottom: 20px !important; */
+}
+
+/* .dx-toolbar-items-container {
+  width: 100px !important;
+}
+.dx-toolbar {
+  width: 100px !important;
+}
+.dx-datagrid-header-panel {
+  width: 100px !important;
+} */
+
+.dx-texteditor-container {
+  width: 150px !important;
+  height: 42.3px !important;
+  border-radius: 4px !important;
+  border: solid 1px #ced4da !important;
+  background-color: #fff !important;
+}
+.dx-button-has-text {
+  border-radius: 4px !important;
+  background-color: #343a40 !important;
+  border: none !important;
+  font-family: normal !important;
+  /* font-size: 11px !important; */
+  color: #fff !important;
+  margin-right: 8px !important;
+  font-family: Arial !important;
+  padding: auto !important;
+}
+.dx-button-has-text:hover {
+  background-color: #23272b !important;
+}
+.dx-button-text {
+  font-size: 16px !important;
+}
+
+.dx-icon-refresh {
+  color: black !important;
+
+  font-weight: bold !important;
+}
+.dx-button-has-icon {
+  align-items: center !important;
+  display: flex !important;
+  justify-content: center !important;
+  border-radius: 4px !important;
+  border: solid 1px #ced4da !important;
+  padding: 11px !important;
+  background-color: #fff !important;
+  height: 38px !important;
+  width: 38px !important;
+}
+.dx-button-has-icon:hover {
+  background-color: #f3f3f3 !important;
 }
