--- a/view/gears.html
+++ b/view/gears.html
@@ -81,7 +81,7 @@
           <div class="demo-container">
             <div id="dataGridDemo">
               <div class="gears-my-vessels">My Vessels</div>
-              <div class="gears-table-header-wrap">
+              <!-- <div class="gears-table-header-wrap">
                 <div class="gears-total"></div>
                 <div class="gears-table-header-right">
                   <div class="gears-manage-list">
@@ -102,7 +102,7 @@
                     <img src="/img/ic-refresh@3x.png" class="ic-refresh" />
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <div id="gridContainer" class="gears"></div>
               <div id="searchMode"></div>
