doc클릭 시 팝업뜨도록 변경

--- a/view/gears.html
+++ b/view/gears.html
@@ -113,7 +113,7 @@
                     Add from e-fleet
                   </button>
                   <button class="gears-sync-btn" type="button">Sync API</button>
-                  <button id="gridDeleteSelected"></button>
+                  <!-- <button id="gridDeleteSelected"></button> -->
                 </div>
                 <!-- <div>
                   <div class="gears-delete-btn"></div>
