--- a/js/myVessel/css/gears.css
+++ b/js/myVessel/css/gears.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
 }
 .gears {
-  height: 500px;
+  height: 570px;
   overflow: auto;
 }
 .gears-header-wrap {
@@ -837,28 +837,28 @@ input {
   width: 290px !important;
   height: 38px !important;
   border-radius: 4px;
-  border: solid 1px #d5dadf;
+
   background-color: #fff;
 }
 #portOfRegistry {
   width: 290px !important;
   height: 38px !important;
   border-radius: 4px;
-  border: solid 1px #d5dadf;
+
   background-color: #fff;
 }
 #flag {
   width: 290px !important;
   height: 38px !important;
   border-radius: 4px;
-  border: solid 1px #d5dadf;
+
   background-color: #fff;
 }
 #classification {
   width: 290px !important;
   height: 38px !important;
   border-radius: 4px;
-  border: solid 1px #d5dadf;
+
   background-color: #fff;
 }
 
@@ -869,7 +869,7 @@ input {
   width: 290px !important;
   height: 38px !important;
   border-radius: 4px;
-  border: solid 1px #d5dadf;
+
   background-color: #fff !important;
 }
 #data-grid-demo {
@@ -892,51 +892,13 @@ input {
 .dx-popup-title {
   background-color: #09976e !important;
 }
-.dx-button {
-  /* margin-bottom: 20px !important; */
-}
-
-/* .dx-toolbar-items-container {
-  width: 100px !important;
-}
-.dx-toolbar {
-  width: 100px !important;
-}
-.dx-datagrid-header-panel {
-  width: 100px !important;
-} */
-
-.dx-texteditor-container {
-  width: 150px !important;
-  height: 42.3px !important;
-  border-radius: 4px !important;
-  border: solid 1px #ced4da !important;
-  background-color: #fff !important;
-}
-.dx-button-has-text {
-  border-radius: 4px !important;
-  background-color: #343a40 !important;
-  border: none !important;
-  font-family: normal !important;
-  /* font-size: 11px !important; */
-  color: #fff !important;
-  margin-right: 8px !important;
-  font-family: Arial !important;
-  padding: auto !important;
-}
-.dx-button-has-text:hover {
-  background-color: #23272b !important;
-}
-.dx-button-text {
-  font-size: 16px !important;
-}
 
 .dx-icon-refresh {
   color: black !important;
 
   font-weight: bold !important;
 }
-.dx-button-has-icon {
+#refreshButton {
   align-items: center !important;
   display: flex !important;
   justify-content: center !important;
@@ -947,6 +909,66 @@ input {
   height: 38px !important;
   width: 38px !important;
 }
+#refreshButton:hover {
+  background-color: #f3f3f3 !important;
+}
 .dx-button-has-icon:hover {
   background-color: #f3f3f3 !important;
+}
+
+#toolbarTotal {
+  background-color: #fff !important;
+  color: #525561 !important;
+  width: auto !important;
+  font-family: Arial !important;
+}
+.dx-datagrid-header-panel {
+  padding: 0px !important;
+}
+
+#toolbarDeleteButton {
+  width: auto !important;
+  height: 38px !important;
+  border-radius: 4px !important;
+  border: solid 1px #464646 !important;
+  background-color: #535353 !important;
+  font-family: Arial !important;
+
+  color: #fff !important;
+}
+#toolbarDeleteButton:hover {
+  background-color: #3a3a3a !important;
+}
+
+#toolbarSelectbox {
+  width: 150px;
+  height: 38px;
+  border-radius: 4px;
+
+  background-color: #fff;
+  border-bottom: none !important;
+}
+
+#toolbarSearchButton {
+  width: auto !important;
+  height: 38px;
+  font-family: Arial !important;
+  padding: 0px !important;
+  border-radius: 4px;
+  background-color: #343a40 !important;
+}
+#toolbarSearchButton:hover {
+  background-color: #23272b !important;
+}
+.dx-datagrid-search-panel {
+  border-bottom: none !important;
+  background-color: #fff !important;
+  width: 228px !important;
+  height: 38px !important;
+
+  margin-left: 0px !important;
+}
+
+.dx-state-focused {
+  box-shadow: inset 0 0 0 1px #13ab96 !important;
 }
