--- a/view/gears.html
+++ b/view/gears.html
@@ -81,7 +81,7 @@
           <div class="demo-container">
             <div id="dataGridDemo">
               <div class="gears-my-vessels">My Vessels</div>
-              <!-- <div class="gears-table-header-wrap">
+              <div class="gears-table-header-wrap">
                 <div class="gears-total"></div>
                 <div class="gears-table-header-right">
                   <div class="gears-manage-list">
@@ -102,7 +102,7 @@
                     <img src="/img/ic-refresh@3x.png" class="ic-refresh" />
                   </div>
                 </div>
-              </div> -->
+              </div>
 
               <div id="gridContainer" class="gears"></div>
               <div id="searchMode"></div>
@@ -114,9 +114,9 @@
                   </button>
                   <button class="gears-sync-btn" type="button">Sync API</button>
                 </div>
-                <!-- <div>
-                  <div class="gears-delete-btn"></div>
-                </div> -->
+                <div>
+                  <div class="gears-delete-btn">Delete</div>
+                </div>
               </div>
             </div>
           </div>
